--- a/css/main.css
+++ b/css/main.css
@@ -24,10 +24,6 @@ p {font-size: 16px;}
   background-color: #2f2f2f; /* Black Gray */
   color: #fff;
 }
-.bg-5 {
-  background-color: #1abc9c; /* Green */
-  color: #ffffff;
-}
 
 .container-fluid {
   padding-top: 50px;
@@ -59,4 +55,16 @@ p {font-size: 16px;}
   text-align: center;
   text-decoration: none;
   border-radius: 50%;
+}
+
+.fa-spin-hover:hover {
+  animation: fa-spin 2s infinite linear;
+}
+
+#quotes {
+  display: inline-block
+}
+
+#about  {
+  display: inline-block
 }
